fix to run on node 16 and add macedonian methodology texts

--- a/front/assets/metodologija/kriterij1.inc.html
+++ b/front/assets/metodologija/kriterij1.inc.html
@@ -1,40 +1,50 @@
 <p>
-  <strong>
-    Organizacija zagotavlja ustrezen nadzor nad poslovanjem (neodvisni člani
-    nadzornega organa v večini, redna srečanja, zapisniki srečanj)
-  </strong>
-</p>
-<p>
-  Ta kriterij zagotavlja, da ima organizacija delujoč organ (npr. nadzorni odbor ali svet
-  zavoda - gleda se namen, ne formalno poimenovanje), ki redno nadzoruje delo poslovodstva
-  in kjer večino članov z glasovalno pravico predstavljajo neodvisni člani, torej tisti, ki za svoje
-  delo niso plačani in na položaj niso bili imenovani zaradi sorodstvenih/prijateljskih vezi.
-  Podatki, ki jih pri tem organizacije posredujejo so:
+  Организацијата обезбедува соодветна контрола врз работата (мнозинство
+  независни членови во не-извршните органи, редовни состаноци, води записници од
+  состаноците). Овој критериум гарантира дека организацијата има функционален
+  не-извршен орган (на пример: управен одбор, надзорен одбор, собрание или совет
+  - важна е целта, а не формалниот назив на органот) кој редовно врши контрола
+  врз работата на извршната канцеларија и каде мнозинство од членовите со правно
+  на глас се независни, односно не се платени или назначени на позицијата поради
+  семејни/пријателски врски. За исполнување на овој критериум, организацијата
+  треба да ги обезбеди следните информации:
 </p>
 <ul>
-  <li>seznam odborov, ki opravljajo funkcijo nadzora nad poslovodstvom,</li>
-  <li>poimenski seznam članov teh organov ter označba njihove povezave z organizacijo, na podlagi katere so bili imenovani/izbrani na ta položaj.</li>
-  <li>opredelitev, kateri člani organa za svojo delo prejemajo nadomestilo,</li>
-  <li>datumi sestankov v preteklem letu,</li>
-  <li>zapisnik zadnje seje.</li>
+  <li>Листа со органи кои вршат контрола врз управувањето;</li>
+  <li>
+    Листа со имиња на членовите на тие органи и индикација за нивната поврзаност
+    со организацијата на основа на која биле назначени/ избрани за оваа
+    позиција;
+  </li>
+  <li>
+    Дали и каков надомест примаат членовите на органот кој врши контрола, датуми
+    на одржани состаноци во изминатата година- записник од последниот состанок.
+  </li>
 </ul>
 <p>
-  Organizacije, ki izpolnjujejo zgornje kriterije, zagotavljajo reden in ustrezen nadzor nad
-  delom poslovodstva, zato je tveganje za nepravilnosti ali zlorabo položaja nižje. Na ta način
-  pa se nevladne organizacije lahko tudi redno posvetujejo s svojimi deležniki o izzivih in
-  priložnostih, s katerimi se soočajo ter se nanje ustrezno odzovejo.
+  Организациите кои го исполнуваат горе наведениот критериум обезбедуваат
+  редовна и соодветна контрола врз работата на управувањето, па ризикот од
+  нерегуларности или злоупотреба на положба е низок. На овој начин, ГО исто така
+  можат редовно да се консултираат со нивните засегнати страни во однос на
+  предизвиците и можностите со кои се соочуваат и да дадат соодветен одговор.
 </p>
 <p>
-  Organizacije posredujejo podatke le o organih, ki so zadolženi za opravljanje <strong>nadzora nad
-  poslovodstvom</strong> in ne vseh organih, ki jih imajo (npr. komisije za etiko, pritožbe …).
+  Организациите обезбедуваат податоци само за нивните органи одговорни за
+  контрола врз управувањето, но не и за сите останати органи кои ги имаат (на
+  пример етички комисии, или механизми за поднесување на жалба, и слично).
+  Фокусот е ставен на оној орган кој има најголемо влијание.
 </p>
-<p><em>Točkovnik za kriterij 1: nadzor nad poslovanjem</em></p>
-<p>1.1 - število sestankov nadzornega organa</p>
+<p>
+  <em>
+    Табела за оценка за критериум 1: контрола врз работата на организацијата
+  </em>
+</p>
+<p>1.1 - Број на состаноци на не-извршниот орган</p>
 <div class="table-responsive">
   <table>
     <tbody>
       <tr>
-        <td>število točk</td>
+        <td>Број на поени</td>
         <td>5</td>
         <td>4</td>
         <td>3</td>
@@ -43,74 +53,89 @@
         <td>0</td>
       </tr>
       <tr>
-        <td>število sestankov</td>
-        <td>5 in več</td>
+        <td>Број на состаноци</td>
+        <td>5 и повеќе</td>
         <td>4</td>
         <td>3</td>
         <td>2</td>
         <td>1</td>
-        <td>Sestankov ni bilo</td>
+        <td>Ниту еден одржан состанок</td>
       </tr>
     </tbody>
   </table>
 </div>
 <p>
-  1.2 - število neodvisnih članov nadzornega organa, ki imajo glasovalno pravico
+  1.2 - Број на независни членови со право на глас во не-извршниот орган
 </p>
 <div class="table-responsive">
   <table>
     <tbody>
       <tr>
-        <td>število točk</td>
+        <td>Број на поени</td>
         <td>3</td>
         <td>2</td>
         <td>1</td>
         <td>0</td>
       </tr>
       <tr>
-        <td>število članov</td>
-        <td>Več kot 5</td>
-        <td>Od 3 do 5</td>
-        <td>2 ali 1</td>
-        <td>Ni neodvisnih članov</td>
+        <td>Број на членови</td>
+        <td>Повеќе од 5</td>
+        <td>Од 3 до 5</td>
+        <td>2 или 1</td>
+        <td>Нема независни членови</td>
       </tr>
     </tbody>
   </table>
 </div>
 <p>
-  1.3 - odstotek neodvisnih članov z glasovalno pravico
+  1.3 - Процент на независни членови со право на глас
 </p>
 <div class="table-responsive">
   <table>
     <tbody>
       <tr>
-        <td>število točk</td>
+        <td>Број на поени</td>
         <td>3</td>
         <td>2</td>
         <td>1</td>
         <td>0</td>
       </tr>
       <tr>
-        <td>Odstotek neodvisnih članov</td>
-        <td>Več kot 75</td>
-        <td>50 do 75</td>
-        <td>Manj kot 50</td>
-        <td>Ni neodvisnih članov</td>
+        <td>Процент на независни членови</td>
+        <td>Повеќе од 75</td>
+        <td>50 до 75</td>
+        <td>Помалку од 50</td>
+        <td>Нема независни членови</td>
       </tr>
     </tbody>
   </table>
 </div>
-<p>1.4 - organizacija vodi zapisnike sej</p>
+<p>1.4 - Организацијата води записници од одржаните состаноци</p>
 <div class="table-responsive">
   <table>
     <tbody>
       <tr>
-        <td>Da</td>
-        <td>2 točki</td>
+        <td>Да</td>
+        <td>2 поени</td>
       </tr>
       <tr>
-        <td>Ne</td>
-        <td>0 točk</td>
+        <td>Не</td>
+        <td>0 поени</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<p>1.5 - Организацијата има родова еднаквост во управниот орган</p>
+<div class="table-responsive">
+  <table>
+    <tbody>
+      <tr>
+        <td>Да</td>
+        <td>2 поени</td>
+      </tr>
+      <tr>
+        <td>Не</td>
+        <td>0 поени</td>
       </tr>
     </tbody>
   </table>
