--- a/front/assets/metodologija/kriterij2.inc.html
+++ b/front/assets/metodologija/kriterij2.inc.html
@@ -1,78 +1,111 @@
 <p>
   <strong>
-    Organizacijo usmerjajo strateški cilji (strateški cilji postavljeni, napredek se spremlja
-    vsaj na 2 leti, obstajajo poročila o napredku)
+    Организацијата е водена од стратешки цели (воспоставени стратешки цели,
+    мониторинг на прогресот најмалку на секои две години, подготвени извештаи за
+    прогрес).
   </strong>
 </p>
 <p>
-  S kriterijem se preverja, ali organizacija svoje aktivnosti načrtuje in izvaja tako, da jo vodijo k
-  doseganju dolgoročnih ciljev in poslanstva, ali zgolj odgovarja na trenutne potrebe in
-  priložnosti (»lov za denarjem«). V praksi to pomeni, da ima organizacija poleg letnih načrtov
-  dela tudi strateške oziroma dolgoročne cilje, ki usmerjajo njeno delo in aktivnosti k
-  uresničevanju njenega poslanstva. Organizacija lahko za oblikovanje dokumenta, v katerem
-  so predstavljeni dolgoročni cilji, uporablja različne metode in pristope, pomembno je le, da
-  tak dokument obstaja. Tudi poimenovanje dokumenta je lahko različno – strateški načrt,
-  vizija razvoja organizacije v naslednjih petih letih, NVO 2025 ali kaj tretjega, pomembno je le,
-  da so v dokumentu cilji in načini za njihovo doseganje vsaj okvirno določeni.
+  Критериумот проверува дали организацијата ги планира и споредува своите
+  активности на начин кој ќе обезбеди исполнување на долгорочните цели и
+  мисијата, или само одговара на тековните потреби и можности („ловење на
+  пари“). Во пракса, ова значи дека организацијата, покрај годишните работни
+  планови, исто така има стратешки и долгорочни цели кои ја насочуваат нејзината
+  работа и активности кон исполнување на нејзината мисија. Организацијата може
+  да употреби различни методи и пристапи за креирање на документ кој ги содржи
+  долгорочните цели, единствено е важно таков документ да постои. Називот на
+  документот исто така може да се разликува- стратешки план, визија за развој на
+  организацијата во следните пет години, и слично. Исто така, важно е во
+  документот да се наведени целите и начините како тие ќе се исполнат. За
+  исполнување на овој критериум, организацијата треба да ги обезбеди следните
+  информации:
 </p>
-<p>Podatki, ki jih organizacije posredujejo so:</p>
 <ul>
-  <li>opredelitev, ali organizacija strateško načrtuje,</li>
-  <li>predložitev strateškega načrta oziroma drugega ustreznega dokumenta, če ga ima,</li>
-  <li>opredelitev, ali organizacija spremlja doseganje strateških ciljev in opis načina kako (npr. predstavitev napredka pri doseganju strateških ciljev na letnem zboru članov; priprava posebnih pisnih poročil; vključitev poglavja o doseganju strateških ciljev v letna vsebinska poročila …)</li>
-  <li>predložitev poročila o spremljanju strateških ciljev, če obstaja.</li>
+  <li>Утврдување дали организацијата има воспоставено стратешко планирање;</li>
+  <li>Поднесување на стратешкиот план или друг релевантен документ;</li>
+  <li>
+    Дефинирање (утврдување) дали организацијата го мониторира исполнувањето на
+    стратешките цели и објаснување како го прави тоа (на пример: презентирање на
+    прогресот во исполнувањето на стратешките цели на годишните состаноци со
+    членовите; подготовка на специјални, пишани извештаи; вклучување на поглавје
+    за исполнување на стратешките цели во годишните извештаи, и слично.);
+  </li>
+  <li>
+    Поднесување на извештај од мониторирање на стратешките цели, доколку има.
+  </li>
 </ul>
 <p>
-  Ocenjevalci zaenkrat pregledujejo le obstoj teh dokumentov in ne ocenjujejo kakovosti postavljenih ciljev in načinov za njihovo
-  doseganje, saj so področja delovanja nevladnih organizacij preveč raznolika in kompleksna,
-  da bi lahko zagotovili dovolj kompetentne neodvisne strokovnjake za vsakega od njih.
+  Со оглед на тоа дека областите на дејствување на ГО се прилично разновидни и
+  комплексни, ќе се проверува само дали постојат документите, но нема да се
+  оценуваат квалитетот на поставените цели и начините како се постигнати.
 </p>
-<p><em>Točkovnik za kriterij 2: strateško načrtovanje</em></p>
-<p>2.1 - organizacija ima strateški načrt</p>
+<p><em>Табела за оценка на критериум 2: стратешко планирање</em></p>
+<p>2.1 - Организацијата има стратешки (или годишен) план</p>
 <div class="table-responsive">
   <table>
     <tbody>
       <tr>
-        <td>da</td>
-        <td>2 točki</td>
+        <td>Да</td>
+        <td>3 поени</td>
       </tr>
       <tr>
-        <td>ne</td>
-        <td>0 točk</td>
-      </tr>
-      <tr></tr>
-    </tbody>
-  </table>
-</div>
-<p>2.2 - organizacija spremlja doseganje strateškega načrta</p>
-<div class="table-responsive">
-  <table>
-    <tbody>
-      <tr>
-        <td>da</td>
-        <td>2 točki</td>
-      </tr>
-      <tr>
-        <td>ne</td>
-        <td>0 točk</td>
+        <td>Не</td>
+        <td>0 поени</td>
       </tr>
       <tr></tr>
     </tbody>
   </table>
 </div>
 <p>
-  2.3 - organizacija pripravlja poročila o spremljanju napredka pri doseganju strateških ciljev
+  2.2 - Организацијата го мониторира (има рамка за мониторирање и презентира
+  внатрешно прогрес) исполнувањето на стратешкиот план
 </p>
 <div class="table-responsive">
   <table>
     <tbody>
       <tr>
-        <td>da</td>
-        <td>1 točka</td>
+        <td>Да</td>
+        <td>3 поени</td>
       </tr>
       <tr>
-        <td>ne</td>
-        <td>0 točk</td>
+        <td>Не</td>
+        <td>0 поени</td>
+      </tr>
+      <tr></tr>
+    </tbody>
+  </table>
+</div>
+<p>
+  2.3 - Организацијата подготвува извештаи од мониторирање на исполнувањето
+  стратешките цели
+</p>
+<div class="table-responsive">
+  <table>
+    <tbody>
+      <tr>
+        <td>Да</td>
+        <td>2 поени</td>
+      </tr>
+      <tr>
+        <td>Не</td>
+        <td>0 поени</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<p>
+  2.4 - Организацијата подготвува годишен план
+</p>
+<div class="table-responsive">
+  <table>
+    <tbody>
+      <tr>
+        <td>Да</td>
+        <td>2 поени</td>
+      </tr>
+      <tr>
+        <td>Не</td>
+        <td>0 поени</td>
       </tr>
     </tbody>
   </table>
