--- a/front/assets/metodologija/kriterij4.inc.html
+++ b/front/assets/metodologija/kriterij4.inc.html
@@ -1,182 +1,186 @@
 <p>
-  Ker je transparentnost organizacij eden od ključnih kazalnikov, ocenjevalci na njihovih
-  spletnih straneh preverjajo, ali imajo organizacije javno objavljene ključne informacije, ki so
-  zapisane spodaj. Pri tem je pomembno tudi, da so informacije predstavljene na splošno
-  razumljiv način in lahko dostopne (so objavljene na mestu, kjer bi jih uporabnik iskal, in v
-  formatu, ki je v splošni uporabi). Organizacije, ki spletnih strani nimajo, bodo pozvane, da te
-  podatke posredujejo neposredno ocenjevalcem, ki organizacijam, glede na prejete
-  dokumente, dodelijo ustrezno število točk.
+  Со оглед на тоа дека транспарентноста на организациите е еден од клучните
+  индикатори, оценувачите прават проверка на веб страницата на организациите и
+  јавно достапните информации наведени подолу. Исто така важно е тоа дали
+  информациите се презентирани на генерално разбирлив начини и се лесно достапни
+  (објавени се на место каде корисникот би ги побарал и во формата која е во
+  општа употреба). Од организациите кои немаат веб страница ќе биде побарано да
+  ги обезбедат овие информации директно, организацијата ќе добие соодветен број
+  на поени врз основа на добиените документи.
 </p>
 <p>
-  Opomba: tudi če ima organizacija posamezno informacijo na spletni strani sicer objavljeno, a
-  je ta dostopna le z neposredno povezavo oziroma tako »skrita«, da je povprečni uporabnik
-  ne more najti, bo organizacija na tem kriteriju vseeno ostala brez točk.
+  Забелешка: дури и во случаите кога организацијата на својата веб страница има
+  објавени индивидуални информации, доколку истите не се пристапни преку
+  директен линк или се „скриени“ на начин на кој просечниот корисник не би можел
+  да ги најде, организациите нема да добијат поени за овој критериум.
 </p>
-<p><em>Točkovnik za kriterij 4: transparentnost</em></p>
-<p>4.1.1 - organizacija ima objavljena letna poročila o delu</p>
+<p><em>Табела за оценка за критериум 4: транспарентност</em></p>
+<p>4.1.1 - Организацијата има објавени наративни годишни извештаи</p>
 <div class="table-responsive">
   <table>
     <tbody>
       <tr>
-        <td>da</td>
-        <td>2 točki</td>
+        <td>Да</td>
+        <td>2 поени</td>
       </tr>
       <tr>
-        <td>ne</td>
-        <td>0 točk</td>
+        <td>Не</td>
+        <td>0 поени</td>
       </tr>
     </tbody>
   </table>
 </div>
-<p>4.1.2 - letna poročila o delu so razumljiva</p>
+<p>4.1.2 - Наративните годишни извештаи се разбирливи</p>
 <div class="table-responsive">
   <table>
     <tbody>
       <tr>
-        <td>da</td>
-        <td>2 točki</td>
+        <td>Да</td>
+        <td>2 поени</td>
       </tr>
       <tr>
-        <td>ne</td>
-        <td>0 točki</td>
+        <td>Не</td>
+        <td>0 поени</td>
       </tr>
     </tbody>
   </table>
 </div>
-<p>4.2.1 - organizacija ima objavljena letna finančna poročila</p>
+<p>4.2.1 - Организацијата има објавени годишни финансиски извештаи</p>
 <div class="table-responsive">
   <table>
     <tbody>
       <tr>
-        <td>da</td>
-        <td>2 točki</td>
+        <td>Да</td>
+        <td>2 поени</td>
       </tr>
       <tr>
-        <td>ne</td>
-        <td>0 točk</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-<p>4.2.2 - finančna poročila so razumljiva</p>
-<div class="table-responsive">
-  <table>
-    <tbody>
-      <tr>
-        <td>da</td>
-        <td>2 točki</td>
-      </tr>
-      <tr>
-        <td>ne</td>
-        <td>0 točk</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-<p>4.2.3 - finančna poročila so razdeljena po programih in vrstah stroškov in prihodkov</p>
-<div class="table-responsive">
-  <table>
-    <tbody>
-      <tr>
-        <td>da</td>
-        <td>2 točki</td>
-      </tr>
-      <tr>
-        <td>ne</td>
-        <td>0 točk</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-<p>4.3 - Objavljeni so prejemki vodstva</p>
-<div class="table-responsive">
-  <table>
-    <tbody>
-      <tr>
-        <td>da</td>
-        <td>2 točki</td>
-      </tr>
-      <tr>
-        <td>ne</td>
-        <td>0 točk</td>
+        <td>Не</td>
+        <td>0 поени</td>
       </tr>
     </tbody>
   </table>
 </div>
 <p class="small font-weight-light">
-  Opomba: pri organizacijah, ki jih vodjo
-  prostovoljci se šteje, da je ta kriteriji
-  izpolnjen, če ima organizacija na spletni
-  strani jasno zapisano, da vodstvo za svoje
-  delo ne prejema plačila.
+  Забелешка: Финансискиот извештај може да биде подготвени во посебен формат или
+  како составен дел од наративните извештаи.
 </p>
-<p>4.4 - objavljeno je razmerje med plačami</p>
+<p>4.2.2 - Финансиските документи се разбирливи</p>
 <div class="table-responsive">
   <table>
     <tbody>
       <tr>
-        <td>da</td>
-        <td>1 točka</td>
+        <td>Да</td>
+        <td>2 поени</td>
       </tr>
       <tr>
-        <td>ne</td>
-        <td>0 točk</td>
+        <td>Не</td>
+        <td>0 поени</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<p>
+  4.2.3 - Финансиските документи се поделени по програми и видови на трошоци и
+  приходи
+</p>
+<div class="table-responsive">
+  <table>
+    <tbody>
+      <tr>
+        <td>Да</td>
+        <td>2 поени</td>
+      </tr>
+      <tr>
+        <td>Не</td>
+        <td>0 поени</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<p>4.3 - Објавен е надоместокот кој го добива раководството</p>
+<div class="table-responsive">
+  <table>
+    <tbody>
+      <tr>
+        <td>Да</td>
+        <td>1 поени</td>
+      </tr>
+      <tr>
+        <td>Не</td>
+        <td>0 поени</td>
       </tr>
     </tbody>
   </table>
 </div>
 <p class="small font-weight-light">
-  Opomba: pri organizacijah, ki nimajo
-  zaposlenih se šteje, da je ta kriterij
-  izpolnjen, če je na spletni strani jasno
-  zapisano, da organizacija nima zaposlenih.
+  Забелешка: во случаите кога организациите се водени од страна на волонтери,
+  овој критериум ќе се смета за исполнет доколку организацијата јасно наведе на
+  веб-страницата дека раководството не прима плата за својата работа.
 </p>
-<p>4.5 - objavljen je seznam ključnih zaposlenih</p>
+<p>4.4 - Објавен е соодносот на платите</p>
 <div class="table-responsive">
   <table>
     <tbody>
       <tr>
-        <td>da</td>
-        <td>1 točka</td>
+        <td>Да</td>
+        <td>1 поени</td>
       </tr>
       <tr>
-        <td>ne</td>
-        <td>0 točk</td>
+        <td>Не</td>
+        <td>0 поени</td>
       </tr>
     </tbody>
   </table>
 </div>
 <p class="small font-weight-light">
-  Opomba: organizacije, ki nimajo zaposlenih
-  vpišejo imena prostovoljcev, ki opravljajo
-  ključne naloge v organizaciji.
+  Забелешка: за волонтерски организации, овој критериум се смета за исполнет
+  доколку на веб страницата е јасно наведено дека организацијата нема вработени.
 </p>
-<p>4.6 - objavljeni so člani nadzornega organa</p>
+<p>4.5 - Објавена е листа со клучните вработени лица</p>
 <div class="table-responsive">
   <table>
     <tbody>
       <tr>
-        <td>da</td>
-        <td>1 točka</td>
+        <td>Да</td>
+        <td>1 поени</td>
       </tr>
       <tr>
-        <td>ne</td>
-        <td>0 točk</td>
+        <td>Не</td>
+        <td>0 поени</td>
       </tr>
     </tbody>
   </table>
 </div>
-<p>4.7 - objavljen je finančni načrt za tekoče leto</p>
+<p class="small font-weight-light">
+  Забелешка: Кај волонтерски организации, да бидат внесени имињата на
+  волонтерите кои ги исполнуваат клучните задачи во организацијата.
+</p>
+<p>4.6 - Објавени се членовите на не-извршните органи</p>
 <div class="table-responsive">
   <table>
     <tbody>
       <tr>
-        <td>da</td>
-        <td>1 točka</td>
+        <td>Да</td>
+        <td>1 поени</td>
       </tr>
       <tr>
-        <td>ne</td>
-        <td>0 točk</td>
+        <td>Не</td>
+        <td>0 поени</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<p>4.7 - Објавен е финансискиот план за тековната година</p>
+<div class="table-responsive">
+  <table>
+    <tbody>
+      <tr>
+        <td>Да</td>
+        <td>1 поени</td>
+      </tr>
+      <tr>
+        <td>Не</td>
+        <td>0 поени</td>
       </tr>
     </tbody>
   </table>
