--- a/front/assets/metodologija/skupnaocena.inc.html
+++ b/front/assets/metodologija/skupnaocena.inc.html
@@ -1,21 +1,21 @@
 <p>
-  Skupna ocena oziroma število zvezdic, ki jih organizacija prejme, se izračuna s seštevanjem
-  točk, ki jih organizacija prejme na vsakem posameznem kriteriju. Najvišje število točk, ki jih
-  organizacija lahko prejme, je 70. Organizacije bodo prejele vseh pet zvezdic, če bodo zbrale
-  več kot 60 točk in ostale brez zvezdic, če bodo zbrale manj kot 30 točk, oziroma če bodo na
-  katerem od ključnih kriterijev prejele le 1 točko. Posamezni razredi so bili oblikovani glede na
-  rezultate tesnega razvrščanja in so zastavljeni na način, da odražajo dejansko odličnost
-  organizacij, pomembnost in uravnoteženost posameznih kriterijev (poudarek na finančnem
-  upravljanju), hkrati pa organizacije spodbujajo, da izboljšajo svoje delovanje in napredujejo.
-  Predvsem na področju transparentnosti lahko organizacije relativno enostavno prejmejo vse
-  točke; je pa zelo malo organizacij, ki te standarde že sedaj v celoti izpolnjujejo.
+  Вкупниот резултат или бројот на ѕвездите кои организацијата ги има освоено се
+  пресметуваат преку збир на поените кои организацијата ги освоила за секој
+  критериум одделно. Највисокиот број на поени кои една организација може да го
+  добие е 70. Организациите ќе добијат 5 ѕвезди доколку освојат повеќе од 60
+  поени и нема да добијат ниту една ѕвезда доколку освојат помалку од 30
+  поени, или доколку освојат само еден поен на еден од клучните критериуми.
+  Методологијата е дизајнирана да ја рефлектира моменталната состојба на
+  организациите, важноста и рамнотежата на индивидуалните критериуми (акцент на
+  финансискиот менаџмент), истовремено охрабрувајќи ги организациите да ги
+  подобрат своите перформанси и постојана да се развиваат.
 </p>
-<p><em>Dodelitev zvezdic</em></p>
+<p><em>Доделување на ѕвезди</em></p>
 <div class="table-responsive">
   <table>
     <tbody>
       <tr>
-        <td>število zvezdic</td>
+        <td>Број на ѕвезди</td>
         <td>5</td>
         <td>4</td>
         <td>3</td>
@@ -24,8 +24,8 @@
         <td>0</td>
       </tr>
       <tr>
-        <td>število točk</td>
-        <td>več kot 60</td>
+        <td>Број на поени</td>
+        <td>Повеќе од 60</td>
         <td>60–51</td>
         <td>50–41</td>
         <td>40–35</td>
