fix points on frontend

--- a/front/assets/metodologija/kriterij3.inc.html
+++ b/front/assets/metodologija/kriterij3.inc.html
@@ -149,7 +149,7 @@
   разлика на вкупниот број освоени поени. Сепак, бројот на поени се уште ќе биде
   видлив на порталот доколку посетителот ги гледа деталите за пресметката.
 </p>
-<p>
+<!--<p>
   <em
     >Kriterij 3.3: znesek, ki ga organizacija porabi za vsakih zbranih 100
     EUR</em
@@ -205,8 +205,8 @@
       </tr>
     </tbody>
   </table>
-</div>
-<p><em>Критериум 3.4: диверзификација на финансиски ресурси</em></p>
+</div>-->
+<p><em>Критериум 3.3: диверзификација на финансиски ресурси</em></p>
 <p>
   <strong>
     Доколку организацијата на пример има најмалку три различни извори на
@@ -241,7 +241,7 @@
 </p>
 <p>
   <em>
-    Табела за оценка на критериум 3.4 - диверзификација на финансиски ресурси
+    Табела за оценка на критериум 3.3 - диверзификација на финансиски ресурси
   </em>
 </p>
 <p>
@@ -249,7 +249,7 @@
   Поголеми спонзори или донатори, без разлика дали станува збор за компании или
   физички лица, можат исто така да бидат наведени како посебни извори.
 </p>
-<p>3.4.1 - Извори на финансирање</p>
+<p>3.3.1 - Извори на финансирање</p>
 <div class="table-responsive">
   <table>
     <tbody>
@@ -272,7 +272,7 @@
     </tbody>
   </table>
 </div>
-<p>3.4.2 - Удел на приходите од најголемиот извор</p>
+<p>3.3.2 - Удел на приходите од најголемиот извор</p>
 <div class="table-responsive">
   <table>
     <tbody>
@@ -354,7 +354,7 @@
     </tbody>
   </table>
 </div>-->
-<p><em>Критериум 3.6 Фер плата</em></p>
+<p><em>Критериум 3.4 Фер плата</em></p>
 <p>
   <strong>
     Соодносот помеѓу највисоката, најниската и просечната плата е соодветен
@@ -380,8 +380,8 @@
   лицето кое ја прима. При тоа, предвид се земаат просечната месечна плата или
   просечната годишна плата заедно со било какви додатоци.
 </p>
-<p><em>Табела за оценка на критериум 3.6 - фер плата</em></p>
-<p>3.6 - Соодносот помеѓу највисоката и просечната плата во организацијата</p>
+<p><em>Табела за оценка на критериум 3.4 - фер плата</em></p>
+<p>3.4 - Соодносот помеѓу највисоката и просечната плата во организацијата</p>
 <div class="table-responsive">
   <table>
     <tbody>
