metodologija fix, links docs

--- a/front/assets/metodologija/0_uvod.inc.html
+++ b/front/assets/metodologija/0_uvod.inc.html
@@ -18,7 +18,7 @@
   Kriteriji ocenjevanja transparentnosti slovenskih nevladnih organizacij so
   nastali ob upoštevanju več mednarodnih kodeksov, priporočil in dobrih praks,
   pa tudi ob misli na različna vprašanja, ki jih na nevladne organizacije
-  pogosto naslavljajo novinarji in zainteresirani posamezniki
+  pogosto naslavljajo novinarji in zainteresirani posamezniki.
 </p>
 
 <p>
