--- a/front/assets/metodologija/1_postopek.inc.html
+++ b/front/assets/metodologija/1_postopek.inc.html
@@ -26,7 +26,7 @@
   zvezdicami. Več kot jih je, bolj je organizacija transparentna.
 </p>
 
-<p><strong>Sistem ocenjevanja in podeljevanja zvezdic</strong></p>
+<p><strong>SISTEM OCENJEVANJA IN PODELJEVANJA ZVEZDIC</strong></p>
 <p>
   Organizacije lahko vsak kriterij bodisi izpolnjujejo bodisi ne. Za lažji
   prikaz transparentnosti se organizacijam podeljujejo zvezdice.
