--- a/front/assets/metodologija/sklop3.inc.html
+++ b/front/assets/metodologija/sklop3.inc.html
@@ -32,14 +32,11 @@
 <p>
   Podobno je tudi glede objave razmerja med plačami. Zakaj objaviti? Predvsem
   zato, ker je debata o tovrstnih razmerjih in mejah njihove pravičnosti v
-  družbi zelo živa in vedno bolj
-</p>
-
-<p>
-  aktualna. Kje so meje pravičnega razmerja, je seveda zelo izmuzljivo in si jih
-  vsekakor ne bi upali za vekomaj zakoličiti. A to ni razlog, da nevladne
-  organizacije aktualnega razmerja ne bi objavile. Prepričani smo, da zanj velja
-  enako kot za prejemke vodstev &ndash; da je skrbno pretehtano in upravičeno.
+  družbi zelo živa in vedno bolj aktualna. Kje so meje pravičnega razmerja, je
+  seveda zelo izmuzljivo in si jih vsekakor ne bi upali za vekomaj zakoličiti. A
+  to ni razlog, da nevladne organizacije aktualnega razmerja ne bi objavile.
+  Prepričani smo, da zanj velja enako kot za prejemke vodstev &ndash; da je
+  skrbno pretehtano in upravičeno.
 </p>
 <p>
   Kako objaviti? Dovolj je navesti, koliko znaša pogodbeno določeno mesečno ali
@@ -94,8 +91,8 @@
   Pogoj za izpolnjevanje kriterija: finančno poročilo je razdeljeno na glavne
   kategorije stroškov &ndash; npr. stroški zaposlenih (plače, regresi,
   prispevki, …), potni stroški (kilometrina, parkirnina, vozovnice, …), stroški
-  zunanjih izvajalcev (avtorske/podjemne pogodbe, računi za blago in storitve, …)
-  ter posredni stroški (najemnina, elektrika, voda, pošta, telefon, ipd.). V
+  zunanjih izvajalcev (avtorske/podjemne pogodbe, računi za blago in storitve,
+  …) ter posredni stroški (najemnina, elektrika, voda, pošta, telefon, ipd.). V
   razdelitev morajo biti vključeni vsi nastali stroški (seštevek vseh navedenih
   stroškov mora biti enak vsem nastalim stroškom organizacije).
 </p>
