--- a/front/assets/metodologija/sklop5.inc.html
+++ b/front/assets/metodologija/sklop5.inc.html
@@ -21,6 +21,14 @@
   orodja WAVE in ročnega preverjanja barvnih kod v spletnem orodju Contrast
   Checker.
 </p>
+<p>
+  Navodila, kako lahko spletno stran preverite s spletnimi orodji dobite v
+  <a
+    href="/docs/Priloga 1 - Navodila za pregled spletnih mest s spletnimi orodji.pdf"
+    target="_blank"
+    >NAVODILIH</a
+  >, ki so Priloga k Metodologiji.
+</p>
 
 <p>
   <strong
