--- a/front/assets/metodologija/sklop2.inc.html
+++ b/front/assets/metodologija/sklop2.inc.html
@@ -6,10 +6,10 @@
   na kakšen način v svoje delo vključuje uporabnike, katerim področjem/programom
   posveča največ pozornosti ipd., ter jim da možnost za medsebojno primerjavo
   sorodnih organizacij. V to področje sta vključena tudi kriterija glede načrta
-  dela za tekoče leto in objavljenih strateških ciljev &ndash; prav to so namreč lahko
-  ključni dejavniki, ki vplivajo na to, da se posameznik lažje odloči, kateri od
-  primerljivih organizacij (npr. društva bolnikov, društva za pomoč zasvojencem
-  ipd.) se bo pridružil ali jo podprl.
+  dela za tekoče leto in objavljenih strateških ciljev &ndash; prav to so namreč
+  lahko ključni dejavniki, ki vplivajo na to, da se posameznik lažje odloči,
+  kateri od primerljivih organizacij (npr. društva bolnikov, društva za pomoč
+  zasvojencem ipd.) se bo pridružil ali jo podprl.
 </p>
 
 <p>
@@ -18,15 +18,11 @@
 <p>
   Pogoj za izpolnjevanje kriterija: objavljeno je letno vsebinsko poročilo za
   preteklo leto. Kot rok za objavo poročila za preteklo leto se bo upošteval 31.
-  marec tekočega leta. Pogoj je izpolnjen
-</p>
-
-<p>
-  takoj, ko je objavljeno vsebinsko poročilo, ne glede na njegovo obliko in
-  obsežnost. Kriterij je izpolnjen tudi, če je vsebinsko poročilo objavljeno
-  skupaj s finančnim poročilom (npr. kot priloga bilancam). Ne velja pa v
-  primeru, da je namesto vsebinskega letnega poročila organizacije objavljeno le
-  poročilo posameznega ali več projektov.
+  marec tekočega leta. Pogoj je izpolnjen takoj, ko je objavljeno vsebinsko
+  poročilo, ne glede na njegovo obliko in obsežnost. Kriterij je izpolnjen tudi,
+  če je vsebinsko poročilo objavljeno skupaj s finančnim poročilom (npr. kot
+  priloga bilancam). Ne velja pa v primeru, da je namesto vsebinskega letnega
+  poročila organizacije objavljeno le poročilo posameznega ali več projektov.
 </p>
 
 <p>
