methodology bold criteria

--- a/front/assets/metodologija/sklop1.inc.html
+++ b/front/assets/metodologija/sklop1.inc.html
@@ -18,7 +18,7 @@
     ustanovitvi in/ali statut)</strong
   >
 </p>
-<p>
+<p class="bolder">
   Pogoj za izpolnjevanje kriterija: na spletni strani je prosto dostopen akt o
   ustanovitvi v primeru zavoda in ustanove oziroma statut v primeru društva.
   Objava zgolj posameznih izsekov ali delov dokumenta ne zadostuje za
@@ -26,7 +26,7 @@
 </p>
 
 <p><strong>Kriterij 2: Organizacija ima objavljeno poslanstvo</strong></p>
-<p>
+<p class="bolder">
   Pogoj za izpolnjevanje kriterija: iz opisa na spletni strani je jasno
   razvidno, kaj organizacija počne in komu/čemu je namenjena.
 </p>
@@ -36,7 +36,7 @@
     >Kriterij 3: Organizacija ima objavljen seznam ključnih zaposlenih</strong
   >
 </p>
-<p>
+<p class="bolder">
   Pogoj za izpolnjevanje kriterija: objavljen je poimenski seznam ključnih
   zaposlenih ali drugih ključnih sodelavcev (dolgoročni prostovoljci, redni
   sodelavci, ki niso redno zaposleni ipd.). Izjemoma, kadar za to obstajajo
@@ -50,7 +50,7 @@
     organov</strong
   >
 </p>
-<p>
+<p class="bolder">
   Pogoj za izpolnjevanje kriterija: objavljen poimenski seznam članov nadzornih
   organov (npr. nadzornega odbora, sveta zavoda ali drugega primerljivega organa
   organizacije).
@@ -62,7 +62,7 @@
     organizacijo</strong
   >
 </p>
-<p>
+<p class="bolder">
   Pogoj za izpolnjevanje kriterija: objavljen je najmanj en (delujoč) način za
   vzpostavitev stika z organizacijo (telefon, e-pošta, kontaktni obrazec), ki pa
   ne sme biti vezan na uporabo posamezne aplikacije (npr. Messenger, Whatsapp,
@@ -75,14 +75,14 @@
     organizacije s podatki komu/kako poslati pritožbe</strong
   >
 </p>
-<p>
+<p class="bolder">
   Pogoj za izpolnjevanje kriterija: objavljen je vsaj en način za vložitev
   pritožbe (pisno preko e-pošte, ustno preko telefona, po pošti na naslov
   organizacije, preko posebnega obrazca, ipd.).
 </p>
 
 <p><strong>Kriterij 7: Objavljen je celoten pritožbeni postopek</strong></p>
-<p>
+<p class="bolder">
   Pogoj za izpolnjevanje kriterija: objavljeni koraki in roki za odločanje o
   pritožbi ter informacija o tem, kdo o pritožbi odloča. Ni potrebno, da so
   poimensko navedene konkretne osebe, zadostuje, da je poimenovan organ, ki je
