--- a/front/assets/metodologija/sklop2.inc.html
+++ b/front/assets/metodologija/sklop2.inc.html
@@ -15,7 +15,7 @@
 <p>
   <strong>Kriterij 1: Objavljeno je vsebinsko poročilo za preteklo leto</strong>
 </p>
-<p>
+<p class="bolder">
   Pogoj za izpolnjevanje kriterija: objavljeno je letno vsebinsko poročilo za
   preteklo leto. Kot rok za objavo poročila za preteklo leto se bo upošteval 31.
   marec tekočega leta. Pogoj je izpolnjen takoj, ko je objavljeno vsebinsko
@@ -31,7 +31,7 @@
     razvidno, s čim se organizacija ukvarja</strong
   >
 </p>
-<p>
+<p class="bolder">
   Pogoj za izpolnjevanje kriterija: Objavljeno je vsebinsko poročilo, ki pokriva
   vsa področja delovanja organizacije in iz katerega je razvidno, kaj je
   organizacija v preteklem letu počela oz. čemu je namenjala svojo pozornost.
@@ -44,12 +44,12 @@
     ne zgolj aktivnosti</strong
   >
 </p>
-<p>
+<p class="bolder">
   Pogoj za izpolnjevanje kriterija: v vsebinskem poročilu morajo biti razvidni
   tudi učinki in rezultati izvedenih aktivnosti, ne le aktivnosti same.
 </p>
-<p><em>Primeri rezultatov: </em></p>
-<ul>
+<p class="bolder"><em>Primeri rezultatov: </em></p>
+<ul class="bolder">
   <li>
     <em
       >Po udeležbi na naših delavnicah šivanja in krojenja so 4 starejše osebe
@@ -76,7 +76,7 @@
     >Kriterij 4: Organizacija ima objavljen načrt dela za tekoče leto</strong
   >
 </p>
-<p>
+<p class="bolder">
   Pogoj za izpolnjevanje kriterija: objavljen je načrt dela, iz katerega je
   razvidno, kaj bo organizacija delala v tekočem letu. Vključena morajo biti vsa
   glavna področja dela, zgolj posamezni projektni načrti ne zadostijo temu
@@ -88,7 +88,7 @@
     >Kriterij 5: Organizacija ima objavljene glavne strateške cilje</strong
   >
 </p>
-<p>
+<p class="bolder">
   Pogoj za izpolnjevanje kriterija: objavljen je vsaj en strateški cilj, iz
   katerega je razvidno, kaj si organizacija v naslednjih letih prizadeva doseči.
   Cilj mora biti zapisan na način, da omogoča preverjanje doseganja cilja (je
