--- a/front/assets/metodologija/sklop3.inc.html
+++ b/front/assets/metodologija/sklop3.inc.html
@@ -70,7 +70,7 @@
     preteklo leto</strong
   >
 </p>
-<p>
+<p class="bolder">
   Pogoj za izpolnjevanje kriterija: za izpolnjevanje pogoja mora organizacija (v
   katerikoli obliki) na svoji spletni strani objaviti finančno poročilo, iz
   katerega je razvidna vsaj skupna višina vseh prihodkov in odhodkov. Objavljena
@@ -87,7 +87,7 @@
     zunanje izvajalce, itd.)</strong
   >
 </p>
-<p>
+<p class="bolder">
   Pogoj za izpolnjevanje kriterija: finančno poročilo je razdeljeno na glavne
   kategorije stroškov &ndash; npr. stroški zaposlenih (plače, regresi,
   prispevki, …), potni stroški (kilometrina, parkirnina, vozovnice, …), stroški
@@ -103,7 +103,7 @@
     organizacija nameni za delovanje (hladni pogon)</strong
   >
 </p>
-<p>
+<p class="bolder">
   Pogoj za izpolnjevanje kriterija: iz finančnega poročila je razviden odstotek
   sredstev, ki ga organizacija porabi za svoje delovanje (hladen pogon) oziroma
   objavljeni podatki omogočajo enostaven izračun tega odstotka.
@@ -112,7 +112,7 @@
 <p>
   <strong>Kriterij 4: Objavljeni so glavni viri financiranja (prihodki)</strong>
 </p>
-<p>
+<p class="bolder">
   Pogoj za izpolnjevanje kriterija: objavljen je seznam glavnih financerjev,
   vsaj tistih, katerih prispevek presega 10 % celotnega proračuna organizacije.
   Pri vsakem financerju mora biti razvidna višina sredstev, ki jih je
@@ -123,13 +123,13 @@
 </p>
 
 <p><strong>Kriterij 5: Objavljeni so prihodki vodstva</strong></p>
-<p>
+<p class="bolder">
   Pogoj za izpolnjevanje kriterija: objavljeni so podatki, iz katerih je
   razvidno, koliko so znašali letni bruto prihodki vodstva (npr. direktor,
   predsednik, generalni sekretar ipd.), ne glede na obliko izplačila (plača,
   podjemna pogodba, nagrade, drugi bonusi ipd.).
 </p>
-<p>
+<p class="bolder">
   Tudi če vodstvo ni zaposleno (npr. predsednik), morajo biti na spletni strani
   objavljeni vsi prihodki, ki so bili izplačani (tudi avtorski honorarji,
   bonusi, nagrade ipd.) oziroma mora biti jasno navedeno, da niso prejeli
@@ -142,7 +142,7 @@
     plačo</strong
   >
 </p>
-<p>
+<p class="bolder">
   Pogoj za izpolnjevanje kriterija: na spletni strani je zapisano vsaj razmerje
   med najnižjo in najvišjo osnovno bruto plačo. Če organizacija nima zaposlenih
   in je to na spletni strani jasno navedeno, se šteje, da je kriterij izpolnjen.
