--- a/front/assets/metodologija/sklop4.inc.html
+++ b/front/assets/metodologija/sklop4.inc.html
@@ -11,7 +11,7 @@
 </p>
 
 <p><strong>Kriterij 1: Objavljena so poročila o zbranih sredstvih</strong></p>
-<p>
+<p class="bolder">
   Pogoj za izpolnjevanje kriterija: organizacija ima objavljeno poročilo o
   zbranih donacijskih sredstvih za preteklo leto (upoštevajoč tudi namenitev
   dela dohodnine), iz katerega so razvidni vsaj skupna višina zbranih sredstev
@@ -26,7 +26,7 @@
     (fundraising akcijah)
   </strong>
 </p>
-<p>
+<p class="bolder">
   Pogoj za izpolnjevanje kriterija: iz objavljenega poročila je razvidna
   razdelitev donatorskih sredstev po posameznih fundraising akcijah in
   kategorijah stroškov. Upošteva se tudi poročilo z navedenimi razdelitvami, ki
