--- a/front/assets/metodologija/sklop5.inc.html
+++ b/front/assets/metodologija/sklop5.inc.html
@@ -15,13 +15,13 @@
     4.5:1</strong
   >
 </p>
-<p>
+<p class="bolder">
   Pogoj za izpolnjevanje kriterija: na vstopni strani organizacije ni nobenega
   teksta, kjer bi bil kontrast manjši od 4.5:1. Pogoj se preverja prek spletnega
   orodja WAVE in ročnega preverjanja barvnih kod v spletnem orodju Contrast
   Checker.
 </p>
-<p>
+<p class="bolder">
   Navodila, kako lahko spletno stran preverite s spletnimi orodji dobite v
   <a
     href="/docs/Priloga 1 - Navodila za pregled spletnih mest s spletnimi orodji.pdf"
@@ -35,7 +35,7 @@
     >Kriterij 2: Spletno mesto je berljivo tudi ob povečavi na 200 %</strong
   >
 </p>
-<p>
+<p class="bolder">
   Pogoj za izpolnjevanje kriterija: kljub povečavi za 200 % se lahko uporabnik
   po spletnem mestu premika brez uporabe vodoravnega drsnika, vsi teksti se
   povečajo, vsebina se ne prekriva in je v celoti vidna. Prav tako ostanejo
@@ -49,7 +49,7 @@
     ovirami</strong
   >
 </p>
-<p>
+<p class="bolder">
   Pogoj za izpolnjevanje kriterija: spustni meniji se odpirajo/zapirajo s klikom
   nanje. Prvi klik miške pri tem ne sme avtomatično odpreti podstrani, premik
   miške pa ne sme zapreti menija.
